--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
   font-weight: 400;
   line-height: 1.5em;
 }
+
 h1,
 h2,
 h3,
@@ -23,27 +24,34 @@ ol {
   margin: 0;
   padding-left: 0;
 }
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
+
 a {
   text-decoration: none;
   color: currentColor;
 }
+
 .container {
   width: 1158px;
   padding: 0px 15px;
   margin: 0 auto;
 }
+
 /*header*/
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  background: #FFF;
-  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+  background: #fff;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
+
 .header-container {
   display: flex;
   align-items: center;
@@ -69,16 +77,15 @@ a {
 .header-logo-accent {
   color: #2e2f42;
 }
+
 .header-list {
   display: flex;
   gap: 40px;
-  
 }
 
 .header-link {
   display: block;
   color: #2e2f42;
-  width: calc((100% - 80px * 2) / 3);
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -89,6 +96,7 @@ a {
   letter-spacing: 0.02em;
   color: #404bbf;
 }
+
 .header-link:hover {
   color: #404bbf;
 }
@@ -97,6 +105,7 @@ a {
   color: #404bbf;
   position: relative;
 }
+
 .header-link.active::after {
   content: '';
   position: absolute;
@@ -114,6 +123,7 @@ a.header-address-link {
   color: #434455;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .header-list-item {
   width: calc((100% - 40 * 1) / 2);
 }
@@ -148,10 +158,12 @@ a.header-address-link {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .hero-container {
   display: block;
   text-align: center;
 }
+
 .hero-title {
   color: #fff;
   font-size: 56px;
@@ -163,6 +175,7 @@ a.header-address-link {
 
   margin: auto;
 }
+
 .button {
   display: block;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -180,9 +193,8 @@ a.header-address-link {
   border: none;
   margin: auto;
   margin-top: 48px;
-  
-  
 }
+
 .button:hover,
 .button:focus {
   background-color: #404bbf;
@@ -213,6 +225,7 @@ a.header-address-link {
   justify-content: center;
   gap: 24px;
 }
+
 .feature-wrapper {
   display: flex;
   justify-content: center;
@@ -232,6 +245,7 @@ a.header-address-link {
 .feature-item {
   width: calc((100% - 24px * 3) / 4);
 }
+
 .feature-title {
   font-size: 20px;
   font-weight: 500;
@@ -241,6 +255,7 @@ a.header-address-link {
   width: 264px;
   margin-bottom: 8px;
 }
+
 .feature-page {
   font-size: 16px;
   letter-spacing: 0.02em;
@@ -252,12 +267,14 @@ a.header-address-link {
   padding: 120px 0;
   background: #f4f4fd;
 }
+
 .team-container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 24px;
 }
+
 .title-team {
   margin-bottom: 72px;
   color: #2e2f42;
@@ -268,6 +285,7 @@ a.header-address-link {
   letter-spacing: 0.02em;
   text-transform: capitalize;
 }
+
 .section-team-list {
   list-style-type: none;
   display: flex;
@@ -275,6 +293,7 @@ a.header-address-link {
   justify-content: center;
   align-items: center;
 }
+
 .section-team-item {
   background-color: #fff;
   border-radius: 0px 0px 4px 4px;
@@ -289,9 +308,11 @@ a.header-address-link {
 .section-team-img {
   width: 264px;
 }
+
 .card-content {
   padding: 32px 0;
 }
+
 .section-team-title {
   color: #2e2f42;
   text-transform: capitalize;
@@ -302,9 +323,11 @@ a.header-address-link {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
+
 .section-team-page {
   text-align: center;
 }
+
 .social-media {
   display: flex;
   gap: 24px;
@@ -312,6 +335,7 @@ a.header-address-link {
   margin-top: 8px;
   align-items: center;
 }
+
 .social-link {
   display: flex;
   justify-content: center;
@@ -325,10 +349,12 @@ a.header-address-link {
   color: #f4f4fd;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .social-link:hover,
 .social-link:focus {
   background-color: #404bbf;
 }
+
 .social-icon {
   fill: currentColor;
 }
@@ -368,6 +394,7 @@ a.header-address-link {
   row-gap: 48px;
   flex-wrap: wrap;
 }
+
 .overlay {
   position: absolute;
   top: 0;
@@ -383,6 +410,7 @@ a.header-address-link {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .wrapper {
   position: relative;
   overflow: hidden;
@@ -391,21 +419,28 @@ a.header-address-link {
 .section-portfolio-item {
   width: calc((100% - 48px) / 3);
   border-radius: 0px 0px 4px 4px;
-  background: #FFF;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  background: #fff;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .section-portfolio-item:hover .overlay {
   transform: translateY(0);
   transition: transform 250ms ease-in;
 }
 
+.section-portfolio-item:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  background: #fff;
+}
+
 .section-portfolio-img {
   background: url(<path-to-image>), lightgray -25.026px 0px no-repeat;
   flex-shrink: 0;
- 
-  
 }
+
 .portfolio-content {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -415,14 +450,17 @@ a.header-address-link {
 .section-portfolio-title {
   margin-bottom: 8px;
 }
-/* footer */
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
+/* footer */
+.footer {
   background-color: #2e2f42;
   padding: 100px 0;
 }
+
+.footer-container {
+  display: flex;
+}
+
 .footer-box {
   margin-right: 120px;
 }
@@ -448,6 +486,7 @@ a.header-address-link {
 .footer-logo-accent {
   color: #f4f4fd;
 }
+
 .footer-page {
   display: flex;
   width: 264px;
@@ -455,6 +494,7 @@ a.header-address-link {
   line-height: 1.05;
   letter-spacing: 0.02em;
 }
+
 .footer-social-link {
   display: flex;
   justify-content: center;
@@ -471,6 +511,7 @@ a.header-address-link {
 .footer-social-link:focus {
   background-color: #31d0aa;
 }
+
 .footer-media-page {
   color: #ffffff;
   font-weight: 500;
@@ -478,11 +519,296 @@ a.header-address-link {
   letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
+
 .footer-social-list {
   display: flex;
   gap: 16px;
   justify-content: center;
 }
+
 .footer-social {
   display: block;
+}
+/*footer-form*/
+.footer-wrapper {
+  display: block;
+}
+
+.wrapper-caption {
+  color: #fff;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  margin-left: 92px;
+}
+
+.subscribe-form {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-left: 88px;
+  margin-right: auto;
+}
+
+.subscribe-form-field {
+}
+
+.subscribe-form-input {
+  width: 264px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  outline: transparent;
+  background-color: transparent;
+  color: #fff;
+}
+
+.subscribe-form-input::placeholder {
+  color: currentColor;
+}
+
+.subscribe-form-btn {
+  color: #fff;
+  display: block;
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  display: flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+}
+
+.subscribe-form-icon {
+  fill: #ffffff;
+}
+
+.subscribe-form-btn:hover,
+.subscribe-form-btn:focus {
+  background-color: #404bbf;
+  cursor: pointer;
+}
+
+/*modal windows*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  background: background rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+.modal {
+  position: relative;
+  width: 408px;
+  min-height: 584px;
+  padding: 24px;
+  border-radius: 4px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+}
+
+.modal-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  border: 4px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) border 250ms
+    cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+.modal-btn .modal-btn-icon:hover,
+.modal-btn .modal-btn-icon:focus {
+  fill: #ffffff;
+}
+.modal-btn-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-caption {
+  color: #2e2f42;
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02;
+  margin-bottom: 16px;
+  margin-top: 24px;
+}
+
+.form-wrapper {
+  margin-bottom: 8px;
+}
+.form-label {
+  display: block;
+  margin-bottom: 4px;
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.form-field {
+  position: relative;
+}
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+}
+.form-input:focus {
+  border-radius: 4px;
+  border: 1px solid #4d5ae5;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus + .form-icon {
+  fill: #4d5ae5;
+}
+
+.form-message {
+  width: 100%;
+  resize: none;
+  min-height: 120px;
+  max-height: 180px;
+  padding-left: 16px;
+  padding-top: 8px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  outline: transparent;
+  background-color: transparent;
+  margin-bottom: 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-message:focus {
+  border: #4d5ae5;
+}
+
+.form-message::placeholder {
+  color: #2e2f4266;
+}
+/* Custom checkbox */
+
+.form-agreement {
+  position: relative;
+  display: block;
+  align-items: center;
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.03em;
+  user-select: none;
+  width: 338px;
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+
+.form-agreement-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  fill: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+}
+
+.checkbox:checked + .form-agreement-checkbox {
+  background-color: #404bbf;
+  border: transparent;
+  fill: #f4f4fd;
+}
+
+.form-agreement-icon {
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: scale(0.3);
+}
+
+.checkbox:checked + .form-agreement-checkbox > .form-agreement-icon {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.form-agreement-link {
+  color: #4d5ae5;
+  font-size: 12px;
+  line-height: 1.3;
+  letter-spacing: 0.04em;
+  text-decoration-line: underline;
+}
+
+.form-btn {
+  display: block;
+  margin: auto;
+  margin-top: 24px;
+  min-width: 169px;
+  min-height: 56px;
+  padding: 16px 32px;
+  border-radius: 4px;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  width: 169px;
+  letter-spacing: 0.04em;
+  cursor: pointer;
 }
