--- a/css/styles.css
+++ b/css/styles.css
@@ -529,7 +529,9 @@ a.header-address-link {
 .footer-social {
   display: block;
 }
+
 /*footer-form*/
+
 .footer-wrapper {
   display: block;
 }
@@ -564,6 +566,11 @@ a.header-address-link {
   outline: transparent;
   background-color: transparent;
   color: #fff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.03em;
+  padding-left: 16px;
 }
 
 .subscribe-form-input::placeholder {
@@ -571,6 +578,8 @@ a.header-address-link {
 }
 
 .subscribe-form-btn {
+  min-width: 165px;
+  height: 40px;
   color: #fff;
   display: block;
   text-align: center;
@@ -584,10 +593,13 @@ a.header-address-link {
   gap: 16px;
   border-radius: 4px;
   background-color: #4d5ae5;
+  cursor: pointer;
+  border: none;
 }
 
 .subscribe-form-icon {
   fill: #ffffff;
+  margin-left: 16px;
 }
 
 .subscribe-form-btn:hover,
@@ -607,7 +619,7 @@ a.header-address-link {
   align-items: center;
   justify-content: center;
   border-radius: 4px;
-  background: background rgba(46, 47, 66, 0.4);
+  background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
@@ -620,14 +632,18 @@ a.header-address-link {
   pointer-events: all;
 }
 .modal {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
   width: 408px;
   min-height: 584px;
-  padding: 24px;
   border-radius: 4px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 
 .modal-btn {
@@ -641,18 +657,19 @@ a.header-address-link {
   height: 24px;
   border-radius: 50%;
   background-color: #e7e9fc;
-  border: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) border 250ms
-    cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 0;
 }
 .modal-btn:hover,
 .modal-btn:focus {
   background-color: #404bbf;
   border: none;
 }
-.modal-btn .modal-btn-icon:hover,
-.modal-btn .modal-btn-icon:focus {
+.modal-btn-icon:hover,
+.modal-btn-icon:focus {
   fill: #ffffff;
 }
 .modal-btn-icon {
@@ -665,7 +682,7 @@ a.header-address-link {
   text-align: center;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.02;
+  letter-spacing: 0.02em;
   margin-bottom: 16px;
   margin-top: 24px;
 }
@@ -692,6 +709,7 @@ a.header-address-link {
   border: 1px solid rgba(46, 47, 66, 0.4);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
+  background-color: transparent;
 }
 .form-input:focus {
   border-radius: 4px;
@@ -710,8 +728,11 @@ a.header-address-link {
 .form-input:focus + .form-icon {
   fill: #4d5ae5;
 }
+.form-wrapper {
+  margin-bottom: 16px;
+}
 
-.form-message {
+.form-comment {
   width: 100%;
   resize: none;
   min-height: 120px;
@@ -720,15 +741,9 @@ a.header-address-link {
   padding-top: 8px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  outline: transparent;
-  background-color: transparent;
-  margin-bottom: 16px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: rgba(46, 47, 66, 0.4);
+  padding: 8px 16px;
 }
-
 .form-message:focus {
   border: #4d5ae5;
 }
@@ -738,57 +753,43 @@ a.header-address-link {
 }
 /* Custom checkbox */
 
-.form-agreement {
-  position: relative;
-  display: block;
-  align-items: center;
+.checkbox-form {
+}
+
+.form-privasy {
   color: #8e8f99;
   font-size: 12px;
-  line-height: 1;
-  letter-spacing: 0.03em;
-  user-select: none;
-  width: 338px;
-  margin-top: 16px;
-  margin-bottom: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
 }
 
 .form-agreement-checkbox {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  width: 16px;
+  height: 16px;
+  fill: transparent;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-
-  width: 16px;
-  height: 16px;
+  flex-shrink: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 8px;
   fill: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
 }
-
-.checkbox:checked + .form-agreement-checkbox {
+.checkbox:checked + .form-privasy > .form-agreement-checkbox {
+  border: none;
   background-color: #404bbf;
-  border: transparent;
-  fill: #f4f4fd;
-}
-
-.form-agreement-icon {
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: scale(0.3);
-}
-
-.checkbox:checked + .form-agreement-checkbox > .form-agreement-icon {
-  opacity: 1;
-  transform: scale(1);
+  fill: #fff;
 }
 
 .form-agreement-link {
   color: #4d5ae5;
   font-size: 12px;
+
   line-height: 1.3;
   letter-spacing: 0.04em;
   text-decoration-line: underline;
@@ -800,6 +801,8 @@ a.header-address-link {
   margin-top: 24px;
   min-width: 169px;
   min-height: 56px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
   padding: 16px 32px;
   border-radius: 4px;
   background: #4d5ae5;
@@ -808,7 +811,8 @@ a.header-address-link {
   text-align: center;
   font-weight: 500;
   line-height: 1.5;
-  width: 169px;
+  border: none;
   letter-spacing: 0.04em;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
