--- a/css/styles.css
+++ b/css/styles.css
@@ -569,7 +569,7 @@ a.header-address-link {
   font-size: 12px;
   font-weight: 400;
   line-height: 2;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.04em;
   padding-left: 16px;
 }
 
@@ -667,6 +667,7 @@ a.header-address-link {
 .modal-btn:focus {
   background-color: #404bbf;
   border: none;
+  fill: #fff;
 }
 .modal-btn-icon:hover,
 .modal-btn-icon:focus {
@@ -743,9 +744,15 @@ a.header-address-link {
   border: 1px solid rgba(46, 47, 66, 0.4);
   color: rgba(46, 47, 66, 0.4);
   padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  background-color: transparent;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-message:focus {
-  border: #4d5ae5;
+  border-color: #4d5ae5;
 }
 
 .form-message::placeholder {
@@ -754,6 +761,7 @@ a.header-address-link {
 /* Custom checkbox */
 
 .checkbox-form {
+  margin-bottom: 24px;
 }
 
 .form-privasy {
@@ -778,7 +786,10 @@ a.header-address-link {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 8px;
-  fill: transparent;
+  
+}
+.checkbox:checked + .form-agreement-checkbox {
+  fill: #F4F4FD;
 }
 .checkbox:checked + .form-privasy > .form-agreement-checkbox {
   border: none;
@@ -797,22 +808,22 @@ a.header-address-link {
 
 .form-btn {
   display: block;
+  min-width: 169px;
+  height: 56px;
   margin: auto;
   margin-top: 24px;
-  min-width: 169px;
-  min-height: 56px;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   padding: 16px 32px;
   border-radius: 4px;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #fff;
   text-align: center;
   font-weight: 500;
   line-height: 1.5;
-  border: none;
   letter-spacing: 0.04em;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: none;
 }
