--- a/css/styles.css
+++ b/css/styles.css
@@ -667,15 +667,15 @@ a.header-address-link {
 .modal-btn:focus {
   background-color: #404bbf;
   border: none;
-  fill: #fff;
+}
+
+.modal-btn-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn-icon:hover,
 .modal-btn-icon:focus {
   fill: #ffffff;
-}
-.modal-btn-icon {
-  fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-caption {
@@ -688,9 +688,6 @@ a.header-address-link {
   margin-top: 24px;
 }
 
-.form-wrapper {
-  margin-bottom: 8px;
-}
 .form-label {
   display: block;
   margin-bottom: 4px;
@@ -701,6 +698,7 @@ a.header-address-link {
 }
 .form-field {
   position: relative;
+  margin-bottom: 8px;
 }
 .form-input {
   width: 100%;
@@ -729,9 +727,6 @@ a.header-address-link {
 .form-input:focus + .form-icon {
   fill: #4d5ae5;
 }
-.form-wrapper {
-  margin-bottom: 16px;
-}
 
 .form-comment {
   width: 100%;
@@ -751,7 +746,7 @@ a.header-address-link {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-message:focus {
+.form-comment:focus {
   border-color: #4d5ae5;
 }
 
@@ -764,7 +759,7 @@ a.header-address-link {
   margin-bottom: 24px;
 }
 
-.form-privasy {
+.form-privacy {
   color: #8e8f99;
   font-size: 12px;
   line-height: 1.17;
@@ -786,21 +781,16 @@ a.header-address-link {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 8px;
-  
 }
-.checkbox:checked + .form-agreement-checkbox {
-  fill: #F4F4FD;
-}
-.checkbox:checked + .form-privasy > .form-agreement-checkbox {
+.checkbox:checked + .form-privacy > .form-agreement-checkbox {
+  fill: #ffffff;
   border: none;
   background-color: #404bbf;
-  fill: #fff;
 }
 
 .form-agreement-link {
   color: #4d5ae5;
   font-size: 12px;
-
   line-height: 1.3;
   letter-spacing: 0.04em;
   text-decoration-line: underline;
