--- a/css/styles.css
+++ b/css/styles.css
@@ -667,15 +667,16 @@ a.header-address-link {
 .modal-btn:focus {
   background-color: #404bbf;
   border: none;
+  
 }
 
 .modal-btn-icon {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-btn-icon:hover,
-.modal-btn-icon:focus {
-  fill: #ffffff;
+.modal-btn:hover .modal-btn-icon,
+.modal-btn:focus .modal-btn-icon {
+  fill: #fff;
 }
 
 .modal-caption {
@@ -698,7 +699,9 @@ a.header-address-link {
 }
 .form-field {
   position: relative;
-  margin-bottom: 8px;
+}
+.form-wrapper {
+   margin-bottom: 8px;
 }
 .form-input {
   width: 100%;
@@ -727,7 +730,9 @@ a.header-address-link {
 .form-input:focus + .form-icon {
   fill: #4d5ae5;
 }
-
+.form-wrapper-comment {
+  margin-bottom: 16px;
+}
 .form-comment {
   width: 100%;
   resize: none;
@@ -783,7 +788,7 @@ a.header-address-link {
   margin-right: 8px;
 }
 .checkbox:checked + .form-privacy > .form-agreement-checkbox {
-  fill: #ffffff;
+  fill: #F4F4FD;
   border: none;
   background-color: #404bbf;
 }
