--- a/css/styles.css
+++ b/css/styles.css
@@ -686,7 +686,7 @@ a.header-address-link {
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
-  margin-top: 24px;
+
 }
 
 .form-label {
@@ -734,6 +734,7 @@ a.header-address-link {
   margin-bottom: 16px;
 }
 .form-comment {
+  display: block;
   width: 100%;
   resize: none;
   min-height: 120px;
